--- a/src/components/Header/SearchBlock/searchBlock.module.css
+++ b/src/components/Header/SearchBlock/searchBlock.module.css
@@ -10,6 +10,36 @@
   margin: 0 0 38px;
 }
 
+.searchBlock__messages {
+  display: flex;
+  column-gap: 7px;
+  align-items: center;
+}
+
+.searchBlock__messageCount {
+  padding: 2px 5px;
+  border-radius: 100%;
+  background-color: var(--orange);
+  color: var(--white);
+}
+
+.searchBlock__inputWrapper {
+  position: relative;
+}
+
+.searchBlock__input {
+  padding: 13px 13px 13px 58px;
+  border-radius: 50px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  border: none;
+}
+
+.searchBlock__searchIcon {
+  position: absolute;
+  left: 29px;
+  top: 11px;
+}
+
 @media all and (min-width: 1024px) {
   .searchBlock {
     padding: 0;
@@ -18,5 +48,7 @@
     border-radius: 0;
     box-shadow: none;
     order: 3;
+    display: flex;
+    column-gap: 50px;
   }
 }
