--- a/src/components/Header/SearchBlock/searchBlock.module.css
+++ b/src/components/Header/SearchBlock/searchBlock.module.css
@@ -8,12 +8,14 @@
   border-radius: 0 0 7px 7px;
   box-shadow: 0 0 20px rgba(0, 0, 0, .1);
   margin: 0 0 38px;
+  column-gap: 15px;
 }
 
 .searchBlock__messages {
   display: flex;
   column-gap: 7px;
   align-items: center;
+  order: 5;
 }
 
 .searchBlock__messages:hover > span > svg > path {
@@ -30,6 +32,8 @@
 
 .searchBlock__inputWrapper {
   position: relative;
+  width: 100%;
+  order: 3;
 }
 
 .searchBlock__input {
@@ -37,6 +41,7 @@
   border-radius: 50px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
   border: none;
+  width: inherit;
 }
 
 .searchBlock__searchIcon {
@@ -55,5 +60,13 @@
     order: 3;
     display: flex;
     column-gap: 50px;
+  }
+
+  .searchBlock__messages {
+    order: initial;
+  }
+
+  .searchBlock__inputWrapper {
+    order: initial;
   }
 }
