--- a/src/components/Content/content.module.css
+++ b/src/components/Content/content.module.css
@@ -1,9 +1,12 @@
+.content {
+  overflow-y: scroll;
+  height: 83%;
+}
+
 @media all and (min-width: 1540px){
   .content {
     padding-right: 44px;
     margin-right: 38px;
     padding-left: 58px;
-    overflow-y: scroll;
-    height: 95%;
   }
 }
