--- a/src/components/CardList/Card/card.module.css
+++ b/src/components/CardList/Card/card.module.css
@@ -7,6 +7,11 @@
   margin-bottom: 26px;
 }
 
+.card:hover {
+  box-shadow: 0 0 1px 1px var(--grey99) inset;
+  cursor: pointer;
+}
+
 .card > * {
   flex: 1 1 100%;
 }
