--- a/src/components/Post/post.module.css
+++ b/src/components/Post/post.module.css
@@ -9,29 +9,36 @@
   z-index: 10;
   background-color: var(--white);
   display: flex;
+  row-gap: 23px;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-.main {
+.modal__header {
+  display: flex;
+  width: 100%;
+}
+
+.modal__main {
   width: 100%;
   height: inherit;
   order: 3;
-  margin-top: 23px;
   padding-right: 10px;
   overflow-y: scroll;
   overflow-x: clip;
+  display: flex;
+  flex-direction: column;
+  row-gap: 30px;
 }
 
-.controls {
+.modal__controls {
   padding: 15px 0;
   border-top: 1px solid var(--greyD9);
-  margin-top: 30px;
   display: flex;
   justify-content: space-between;
 }
 
-.cross {
+.modal__cross {
   position: absolute;
   right: 20px;
   top: 30px;
@@ -43,23 +50,22 @@
     height: 80%;
     box-shadow: 0px 0px 50px rgb(0 0 0 / 15%);
     border-radius: 7px;
-    background-color: var(--white);
     padding: 30px 27px 37px 60px;
     left: calc(10%);
     top: calc(15% - 25px);
   }
 
-  .main {
+  .modal__main {
     padding-right: 26px;
   }
 
-  .cross {
+  .modal__cross {
     cursor: pointer;
     transform: rotate(0);
     transition: .5s;
   }
   
-  .cross:hover {
+  .modal__cross:hover {
     transition: .5s;
     transform: rotate(180deg);
   }
