--- a/src/components/Header/SortBlock/sortBlock.module.css
+++ b/src/components/Header/SortBlock/sortBlock.module.css
@@ -1,5 +1,6 @@
 .sortBlock {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   column-gap: 5px;
   background-color: var(--white);
