--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,9 +1,20 @@
+.header__title {
+  display: flex;
+  flex-direction: column;
+  row-gap: 15px;
+}
+
 @media all and (min-width: 1024px){
   .header {
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
     padding: 40px;
+  }
+
+  .header__title {
+    flex-direction: row;
+    column-gap: 25px;
   }
 }
 
