--- a/src/components/CardList/Card/card.module.css
+++ b/src/components/CardList/Card/card.module.css
@@ -12,6 +12,10 @@
   cursor: pointer;
 }
 
+.card:hover > div > h2 {
+  color: var(--orange);
+}
+
 .card > * {
   flex: 1 1 100%;
 }
@@ -35,10 +39,6 @@
     padding: 20px;
     margin: 0;
     flex-flow: nowrap;
-  }
-
-  .card:hover, .card:focus-within {
-    outline: 1px solid var(--grayD9);
   }
 
   .actions {
