--- a/src/components/Header/SortBlock/sortBlock.module.css
+++ b/src/components/Header/SortBlock/sortBlock.module.css
@@ -6,7 +6,7 @@
   background-color: var(--white);
   padding: 11px 20px;
   border-radius: 7px;
-  margin: 0 0 20px;
+  margin: 0;
   cursor: pointer;
 }
 
