--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,3 +1,16 @@
+.header {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  margin-bottom: 20px;
+}
+
+.header__head {
+  display: flex;
+  row-gap: 38px;
+  flex-direction: column;
+}
+
 .header__title {
   display: flex;
   flex-direction: column;
@@ -6,10 +19,17 @@
 
 @media all and (min-width: 1024px){
   .header {
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
     padding: 40px;
+    row-gap: 30px;
+    margin: 0;
+  }
+
+  .header__head {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
   }
 
   .header__title {
@@ -20,8 +40,6 @@
 
 @media all and (min-width: 1540px){
   .header {
-    display: grid;
-    grid-template-columns: auto 1fr auto;
     column-gap: 24px;
     padding: 67px 60px 60px 67px;
   }
